@@ -1,0 +1,6 @@
+#ifndef _ODE_VERSION_H_
+#define _ODE_VERSION_H_
+
+#define dODE_VERSION "@ODE_VERSION@"
+
+#endif
